// v1.6 - dd/mm/2012 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - 
	  
  upgrades:
    - de4dot 1.9.0 update. New deobfuscation support for CodeFort, CodeWall,
      ILProtector, MPRESS, Rummage.
    - Mono.Cecil update.
        
  bugfixes:
    - 

////////////////////////////////////////////////////////////////////////////////
// v1.5 - 16/04/2012 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - deobfuscation support for Babel NET, CliSecure, CodeVeil, CryptoObfuscator
      DeepSea, Dotfuscator, dotNET Reactor, Eazfuscator NET, Goliath NET,
      MaxtoCode, Skater NET, SmartAssembly, Spices Net and Xenocode.
      Thanks to de4dot by 0xd4d!
	  
  upgrades:
    - Mono.Cecil update.
        
  bugfixes:
    - bugfix for "register for verification skipping" and delay signed assembly.
    - bugfix for "resign" and delay signed assembly.
      
////////////////////////////////////////////////////////////////////////////////
// v1.4 - 27/01/2012 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - custom attributes support.
    - assembly/module renaming.
    
  upgrades:
    - search the type tree with a regex like ^SerializableAttribute$.
    
  bugfixes:
    - fixed drag&drop issues with column headers.
    - fixed broken ExceptionHandler editor after Mono.Cecil 0.9.x migration.
    - fixed broken Variable editor after Mono.Cecil 0.9.x migration.
    - fixed assembly resolution issues, thanks to Douglas Drinka.
  
////////////////////////////////////////////////////////////////////////////////
// v1.3 - 24/08/2011 ///////////////////////////////////////////////////////////